k8s/ingress-service.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    certmanager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  tls:
    - hosts:
        - endpbm.com
        - www.endpbm.com
      secretName: endpbm-com
  rules:
    - host: endpbm.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: client-cluster-ip-service
              port:
                number: 3000
        - pathType: Prefix
          path: "/api/"
          backend:
            service:
              name: service-cluster-ip-service
              port:
                number: 5000
    - host: endpbm.com
      http:
        paths:
        - pathType: Prefix
          path: "/"
          backend:
            service:
              name: client-cluster-ip-service
              port:
                number: 3000
        - pathType: Prefix
          path: "/api/"
          backend:
            service:
              name: service-cluster-ip-service
              port:
                number: 5000
